--- a/problem-a/css/style.css
+++ b/problem-a/css/style.css
@@ -1,7 +1,8 @@
 body {
     font-size: 16px;
-    font: 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
+
 
 p {
     line-height: 1.5;
